--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,13 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Iko Nini Merchandise Shop"
+      content="Ruple Art"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -24,10 +28,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Iko Nini | Merchandise Shop</title>
+    <title>Ruple Art</title>
   </head>
   <body>
-    <noscript>Iko Nini Merchandise Shop</noscript>
+    <noscript>For the love of art</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
